[tool.poetry]
name = "blood-hound-api-client"
version = "2.0.0"
description = "A client library for accessing BloodHound API"
authors = []
readme = "README.md"

packages = [
    { include = "blood_hound_api_client", from = "sdk" },
    { include = "auth" }
]

include = [
    "auth",
    "auth/hmac_authenticated_client.py",
    "sdk/blood_hound_api_client/py.typed",
    "CHANGELOG.md"
]


[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.20.0,<0.28.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
